...
    
    
    // MARK: User Interaction
    
    private func configureBarButtonItems() {
        navigationItem.rightBarButtonItem = UIBarButtonItem(
            title: "Playlists", style: .plain,
            target: self, action: #selector(selectPlaylist(_:)))
    }
    
    @objc private func selectPlaylist(_ sender: UIBarButtonItem) {
        let alertController = UIAlertController(title: "Select Playlist", message: nil, preferredStyle: .actionSheet)
        
...
